// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`converts a class mount with a pure function in it 1`] = `
<div
  className="class-with-pure class"
  onClick={[Function]}
>
  <BasicPure
    className="nested-pure"
  >
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      className="empty"
    />
  </BasicPure>
</div>
`;

exports[`converts basic class shallow 1`] = `
<div
  className="basic-class class"
  onClick={[Function]}
>
  <div
    className="group"
    id="group-id"
  >
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      className="empty"
    />
  </div>
</div>
`;

exports[`converts basic pure shallow 1`] = `
<div
  className="basic-pure pure"
  onClick={[Function]}
>
  <div
    className="group"
    id="group-id"
  >
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      className="empty"
    />
  </div>
</div>
`;

exports[`handles a component which returns null 1`] = `null`;

exports[`handles elements in prop arrays 1`] = `
<BasicPure
  elements={
    Array [
      <BasicPure>
        <strong>
            Hello!
        </strong>
    </BasicPure>,
    ]
  }
/>
`;

exports[`handles elements in prop objects 1`] = `
<BasicPure
  element={
    Object {
      "element": <BasicPure>
        <strong>
            Hello!
        </strong>
    </BasicPure>,
      "nestedElements": Array [
        <BasicPure>
          <strong>
                Hello again!
          </strong>
    </BasicPure>,
      ],
    }
  }
/>
`;

exports[`handles elements in props 1`] = `
<BasicPure
  element={
    <BasicPure>
      <strong>
        Hello!
      </strong>
    </BasicPure>
  }
/>
`;

exports[`ignores non-plain objects 1`] = `
<BasicPure
  instance={
    TestConstructor {
      "_test": true,
    }
  }
/>
`;

exports[`renders multiple elements as a result of find 1`] = `
Array [
  <li>
    0
</li>,
  <li>
    1
</li>,
]
`;

exports[`skips undefined props 1`] = `
<button>
  Hello
</button>
`;
